vlib/v/parser/tests/fn_call_unexpected_eof_rpar_err.out
vlib/v/parser/tests/fn_call_unexpected_eof_rpar_err.vv:1:12: error: unexpected eof, expecting `)`
    1 | println('a',
      |            ^
    2 |
